    customer search module with filled zip and city fields  (alec)
  - fixed few problems with apostrophe sign in tariffs names (alec)
  - optimized query speed of cash registries list (alec)
  - access rights: added 'customers group management' privilage (alec)
  - lmsd/payments: added %month and %year variables for comment (alec)

version 1.9.8 Idos (2007-07-12):

  - changed DB driver version format (alec)
  - lmsd: added %i16 variable for IP's last octet heximal representation
    in tc/tc-ng and %i16 and %i16pub in hostfile module (alec) 
  - mysql driver: server version checking only when connected (alec)
  - fixed problem when invoicing without tax rates defined (alec)
  - renamed tariffdelete.php to tariffdel.php according to modules naming
    convention (alec)
  - helpdesk: added 'include contact info' checkbox for requests list 
    printing (alec)
  - lms-traffic-logiptables: iptables 1.3.7 support (alec)
  - mac fields should accept now every mac format, including windows, cisco,
    etc (lukasz)
  - %CMAC macro in lms-mgc returns cisco format address: nnnn.nnnn.nnnn (lukasz)
  - network map: rised limit of nodes connected to one device (alec)
  - network map: increased limit of devices connected to one device (alec)
  - network map: devices connection lines are not overlaps (alec)
  - network map: fixed thick line look, better map generation speed (alec)
  - network map: view without nodes (alec)
  - network devices: fixed devices list sorting by used ports count (alec)
  - network devices: added search engine (alec)
  - let liabilities values be less than zero (chilek)
  - lmsd/ggnotify: fixed query (alec)
  - added reason field to invoice notes (chilek)
  - helpdesk: ticket's status change when adding note (alec)
  - searching by any part of node name in quicksearch (alec)
  - Xajax 0.2.5 (alec)
  - fixed balance sheet printing with use of network filter (alec)
  - nodes searching by MAC address in many formats eg. XXXXXXXXXXXX,